--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -O2")
+message(${CMAKE_CXX_FLAGS_RELEASE})
+
 project(2l_busy_beaver)
 add_executable(${PROJECT_NAME} "main.cpp")
