Move Run and State to a separate file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_VERBOSE_MAKEFILE ON)
 message(${CMAKE_CXX_FLAGS_RELEASE})
 
 project(2l_busy_beaver)
-add_executable(${PROJECT_NAME} "main.cpp" "field.h")
+add_executable(${PROJECT_NAME} main.cpp field.h run.h state.h)
